# redshift_circuit

./: Cargo.toml
src/: lib.rs
src/channel/: mod.rs  rescue_channel.rs
src/common/: boolean.rs  mod.rs  multipack.rs  num.rs  uint32.rs
src/experiemental/: aes_circuit.rs  aes_circuit_davis_meyer.rs  aes_circuit_hirose.rs  aes_speed.rs  basic_gadgets.rs  binary_field.rs  cs.rs  gates.rs  mod.rs  test_assembly.rs
src/fri/: fri_utils.rs  fri_verifier.rs  mod.rs  tests.rs
src/funny_circuits/: battleship.rs  blackjack.rs
src/hashes/: bn256_rescue_sbox.rs  mod.rs  rescue.rs
src/hashes/poseidon/: mod.rs
src/hashes/rescue/: bn256_rescue_sbox.rs  mod.rs
src/oracles/: mod.rs  rescue_merklee_proof.rs
src/redshift_circuit/: circuit.rs  data_structs.rs  mod.rs  tests.rs  upper_layer_combiner.rs
src/tester/: mod.rs  naming_dependent_cs.rs  naming_oblivious_cs.rs
